@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.XX.X                                     ---
 ----------------------------------------------------------------------
 
+* added bot check manifold cmd for bot validity testing - Cliff Yapp
 * added bot repair command for filling holes in meshes - Cliff Yapp
 * added Utah RLE image reading and writing to libicv - Cliff Yapp
 * added "standardize" option to GED attr command - Cliff Yapp
